--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   uuid: ^2.0.1
   http: ^0.12.0+2
-  shared_preferences: ^0.5.2
+  shared_preferences: ^0.5.6
+  flutter_easyloading: ^1.0.1
+  sprintf: ^4.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
