--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,20 @@
-name: odoo_client
+name: odoo_json_rpc_flutter
 description: A new Flutter application.
-
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
-
 environment:
-  sdk: ">=2.1.0 <3.0.0"
-
+  sdk: ">=2.7.0 <3.0.0"
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
-  uuid: ^2.0.1
-  http: ^0.12.0+2
-  shared_preferences: ^0.5.6
-  flutter_easyloading: ^1.0.1
-  sprintf: ^4.0.2
-
+  cupertino_icons: ^1.0.0
+  uuid: ^2.2.2
+  http: ^0.12.2
+  shared_preferences: ^0.5.12+4
+  sprintf: ^5.0.0
+  loading: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 flutter:
   uses-material-design: true
